glue/codegen/src/snapshots/codegen__codegen_openapi__tests__basic_endpoint.snap
---
source: codegen/src/codegen_openapi.rs
expression: json_value
---
{
  "components": {
    "schemas": {
      "User": {
        "properties": {
          "id": {
            "type": "integer"
          },
          "name": {
            "type": "string"
          }
        },
        "required": [
          "id",
          "name"
        ],
        "type": "object"
      }
    }
  },
  "info": {
    "title": "Generated API",
    "version": "1.0.0"
  },
  "openapi": "3.0.0",
  "paths": {
    "/users": {
      "get": {
        "description": "Lists all users",
        "operationId": "ListUsers",
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "items": {
                    "$ref": "#/components/schemas/User"
                  },
                  "type": "array"
                }
              }
            },
            "description": "200 response"
          }
        },
        "summary": "Lists all users"
      }
    }
  }
}
